Fixed some alignments

--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,11 @@ body {
 
 #main-container {
     width: 50%;
-    flex: 1;
 }
 
 #content-wrap {
-    padding-left: 5rem;
-    padding-top: 5rem;
+    padding-left: 10rem;
+    padding-top: 3rem;
 }
 
 #introduction {
@@ -35,7 +34,7 @@ body {
 }
 
 #introduction p {
-    margin: 1.5rem 0;
+    margin: 1rem 0;
 }
 
 #introduction #name {
@@ -87,7 +86,8 @@ nav a:hover {
 }
 
 #donut {
-    padding-top: 5rem;
+    padding-top: 4rem;
+    font-size: 16px;
 }
 
 footer {
@@ -96,7 +96,7 @@ footer {
     width: 100%;
     height: 3rem;
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 footer a {
